force-app/main/default/objects/Team_Member__c/Team_Member__c.object-meta.xml
<CustomObject>
    <description
  >Junction object linking players and staff to teams</description>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>