force-app/main/default/objects/Team_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Player or staff member</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Memberships</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>