force-app/main/default/objects/Team_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the member on the team</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Player</fullName>
                <default>true</default>
                <label>Player</label>
            </value>
            <value>
                <fullName>Head Coach</fullName>
            </value>
            <value>
                <fullName>Assistant Coach</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>