force-app/main/default/objects/Team_Member__c/validationRules/Role_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Required</fullName>
    <active>true</active>
    <description>Ensures role is selected for team member</description>
    <errorConditionFormula>ISBLANK(TEXT(Role__c))</errorConditionFormula>
    <errorDisplayField>Role__c</errorDisplayField>
    <errorMessage>Role is required for all team members.</errorMessage>
</ValidationRule>